kubernetes/vpn/amnezia-wg-easy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amnezia-wg-easy
  namespace: vpn
spec:
  selector:
    app: amnezia-wg-easy
  ports:
    - name: web-ui
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: amnezia-wg-easy-udp
  namespace: vpn
spec:
  selector:
    app: amnezia-wg-easy
  ports:
    - name: wireguard
      port: 21
      targetPort: 21
      protocol: UDP
