kubernetes/vpn/amnezia-wg-easy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amnezia-wg-easy-ui
  namespace: vpn
spec:
  defaultBackend:
    service:
      name: amnezia-wg-easy
      port:
        name: web-ui
  ingressClassName: tailscale
  tls:
    - hosts:
        - wg
